# Xread

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/xread/: __init__.py  analyser.py  fetcher.py  vault_writer.py
tests/: test_analyser.py  test_fetcher.py  test_vault_writer.py
